# llama-benchy-viz-web

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  _merge_benchys.py  live-race.sh  live-single.sh  replay.sh  static-race.sh  static-single.sh
src/llama_benchy_viz_web/: __init__.py  __main__.py  server.py  view_model_json.py
src/llama_benchy_viz_web/static/: app.js  chart.js  index.html  layout.js  modules.js  style.css
tests/: gen.py  live_demo.py  smoke.py
